code/human_written_tests/WebAssembly/processed_control_flow_validation/test_if_21.wast
(assert_invalid
  (module (func $type-then-value-num-vs-void
    (if (i32.const 1) (then (i32.const 1)))
  ))
  "type mismatch"
)